fix minor layout bugs

--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,10 @@ body {
 
 .columns img {
   width: 300px;
+  /*height: 100%;
+  width: 100%;
+  max-width: 400px;
+  max-height: 300px;*/
   margin-top: 10px;
   margin-bottom: 10px;
   margin-left: auto;
@@ -532,7 +536,7 @@ p {
 }
 
 #menuContent {
-  position: absolute;
+  position: fixed;
   left: -1000px;
   opacity: 0;
 }
